src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__program_call_parameter_validation.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: "&diagnostics"
---
error[E031]: Cannot mix implicit and explicit call parameters!
   ┌─ <internal>:23:35
   │
23 │             prog(output1 => var1, var1, var1); // invalid cannot mix explicit and implicit
   │                                   ^^^^ Cannot mix implicit and explicit call parameters!

error[E031]: Cannot mix implicit and explicit call parameters!
   ┌─ <internal>:23:41
   │
23 │             prog(output1 => var1, var1, var1); // invalid cannot mix explicit and implicit
   │                                         ^^^^ Cannot mix implicit and explicit call parameters!

error[E037]: Invalid assignment: cannot assign 'STRING' to 'DINT'
   ┌─ <internal>:25:18
   │
25 │             prog(input1 := var2, inout1 := var3, output1 => var4); // invalid types assigned
   │                  ^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'DINT'

error[E065]: The type DINT 32 is too small to hold a Pointer
   ┌─ <internal>:25:34
   │
25 │             prog(input1 := var2, inout1 := var3, output1 => var4); // invalid types assigned
   │                                  ^^^^^^^^^^^^^^ The type DINT 32 is too small to hold a Pointer

error[E037]: Invalid assignment: cannot assign 'REF_TO WSTRING' to 'DINT'
   ┌─ <internal>:25:34
   │
25 │             prog(input1 := var2, inout1 := var3, output1 => var4); // invalid types assigned
   │                                  ^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'REF_TO WSTRING' to 'DINT'

error[E037]: Invalid assignment: cannot assign 'STRING' to 'DINT'
   ┌─ <internal>:27:18
   │
27 │             prog(var2, var3, var4); // invalid types assigned
   │                  ^^^^ Invalid assignment: cannot assign 'STRING' to 'DINT'

error[E065]: The type DINT 32 is too small to hold a Pointer
   ┌─ <internal>:27:24
   │
27 │             prog(var2, var3, var4); // invalid types assigned
   │                        ^^^^ The type DINT 32 is too small to hold a Pointer

error[E037]: Invalid assignment: cannot assign 'REF_TO WSTRING' to 'DINT'
   ┌─ <internal>:27:24
   │
27 │             prog(var2, var3, var4); // invalid types assigned
   │                        ^^^^ Invalid assignment: cannot assign 'REF_TO WSTRING' to 'DINT'

warning[E067]: Implicit downcast from 'REAL' to 'DINT'.
   ┌─ <internal>:27:30
   │
27 │             prog(var2, var3, var4); // invalid types assigned
   │                              ^^^^ Implicit downcast from 'REAL' to 'DINT'.
